<package>
  <name>geometry_tutorials</name>
  <version>0.2.2</version>
  <description>Metapackage of geometry tutorials ROS.</description>
  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>

  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/geometry_tutorials</url>
  <url type="repository">https://github.com/ros/geometry_tutorials</url>
  <url type="bugtracker">https://github.com/ros/geometry_tutorials/issues</url>

  <author email="tfoote@osrfoundation.org">Tully Foote</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>turtle_tf</run_depend>
	<run_depend>turtle_tf2</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
