<?xml version="1.0"?> 
<package>
  <name>turtle_tf2</name>
  <version>0.2.2</version>
  <description>
		turtle_tf2 demonstrates how to write a tf2 broadcaster and listener with the turtlesim. The tutle_tf2_listener commands turtle2 to follow turtle1 around as you drive turtle1 using the keyboard.
	</description>
  <maintainer email="denis.stogl@mailbox.org">Denis Štogl</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/turtle_tf2</url> -->
	<url type="repository">https://github.com/ros/geometry_tutorials</url>
  <url type="bugtracker">https://github.com/ros/geometry_tutorials/issues</url>

  <author email="denis.stogl@mailbox.org">Denis Štogl</author>

  <buildtool_depend>catkin</buildtool_depend>
	
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>	
  <build_depend>turtlesim</build_depend>
	
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>
	<run_depend>turtlesim</run_depend>

</package>